feat(dev): update api for pbv6 backtest
